--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@babel/core": "^7.22.9",
     "@babel/preset-env": "^7.22.9",
     "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@types/react": "^18.2.18",
+    "@types/react-dom": "^18.2.7",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "eslint": "^8.45.0",
@@ -28,6 +31,7 @@
     "html-webpack-plugin": "^5.5.3",
     "prettier": "^3.0.0",
     "style-loader": "^3.3.3",
+    "typescript": "^5.1.6",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
