--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,4 +1,9 @@
 {
+  "semi": true,
+  "trailingComma": "none",
   "singleQuote": true,
-  "trailingComma": "none"
+  "jsxSingleQuote": false,
+  "printWidth": 80,
+  "tabWidth": 2,
+  "endOfLine": "auto"
 }
