--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,8 @@
     "airbnb",
     "airbnb-typescript",
     "plugin:jsx-a11y/recommended",
-    "prettier"
+    "prettier",
+    "plugin:prettier-recommended"
   ],
   "parserOptions": {
     "project": "./tsconfig.json",
