--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,7 @@
     "airbnb-typescript",
     "plugin:jsx-a11y/recommended",
     "prettier",
-    "plugin:prettier-recommended"
+    "plugin:prettier/recommended"
   ],
   "parserOptions": {
     "project": "./tsconfig.json",
