changed dist folder to build

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,5 +18,5 @@
   "rules": {
     "semi": "error"
   },
-  "ignorePatterns": ["webpack/*", "node_modules/*"]
+  "ignorePatterns": ["webpack/*", "node_modules/*", "build/"]
 }
