--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint \"src/**/*.{ts,tsx}\" --quiet",
     "start": "webpack serve --config webpack/webpack.config.js --env env=dev --open",
     "build": "webpack --config webpack/webpack.config.js --env env=prod",
-    "buildopen": "npx live-server --open=dist/index.html"
+    "buildopen": "npx live-server --open=build/index.html"
   },
   "keywords": [],
   "author": "",
