--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,22 +1,39 @@
 {
-  "env": {
-    "browser": true,
-    "node": true
-  },
-  "extends": [
-    "airbnb",
-    "airbnb-typescript",
-    "plugin:jsx-a11y/recommended",
-    "prettier",
-    "plugin:prettier/recommended"
+  "overrides": [
+    {
+      "env": {
+        "browser": true,
+        "node": true
+      },
+      "files": "**/*.+(ts|tsx)",
+      "extends": [
+        "airbnb",
+        "airbnb-typescript",
+        "plugin:jsx-a11y/recommended",
+        "prettier",
+        "plugin:prettier/recommended"
+      ],
+      "parserOptions": {
+        "project": "./tsconfig.json",
+        "sourceType": "module"
+      },
+      "plugins": ["jsx-a11y"]
+    },
+    {
+      "env": {
+        "node": true
+      },
+      "files": "**/*.+(js)",
+      "extends": ["airbnb", "prettier", "plugin:prettier/recommended"],
+      "plugins": ["commonjs"],
+      "rules": {
+        "semi": "error",
+        "commonjs/no-duplicate-exports": 2
+      }
+    }
   ],
-  "parserOptions": {
-    "project": "./tsconfig.json",
-    "sourceType": "module"
-  },
-  "plugins": ["jsx-a11y"],
   "rules": {
     "semi": "error"
   },
-  "ignorePatterns": ["webpack/*", "node_modules/*", "build/"]
+  "ignorePatterns": ["node_modules", "build"]
 }
