--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,11 @@
       "plugins": ["commonjs"],
       "rules": {
         "semi": "error",
-        "commonjs/no-duplicate-exports": 2
+        "commonjs/no-duplicate-exports": 2,
+        "import/no-extraneous-dependencies": "off",
+        "import/extensions": "off",
+        "import/no-dynamic-require": "off",
+        "global-require": "off"
       }
     }
   ],
