--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,7 +37,8 @@
     }
   ],
   "rules": {
-    "semi": "error"
+    "semi": "error",
+    "no-console": "warn"
   },
   "ignorePatterns": ["node_modules", "build"]
 }
