--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,7 @@
         "browser": true,
         "node": true
       },
-      "files": "**/*.+(ts|tsx)",
+      "files": "./src/**/*.{ts,tsx}",
       "extends": [
         "airbnb",
         "airbnb-typescript",
@@ -23,7 +23,7 @@
       "env": {
         "node": true
       },
-      "files": "**/*.+(js)",
+      "files": "./webpack/**/*.js",
       "extends": ["airbnb", "prettier", "plugin:prettier/recommended"],
       "plugins": ["commonjs"],
       "rules": {
