--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.3",
     "live-server": "^1.2.2",
+    "mini-css-extract-plugin": "^2.7.6",
     "prettier": "^3.0.0",
+    "sass": "^1.66.1",
+    "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "typescript": "^5.1.6",
     "webpack": "^5.88.2",
